Adding school models

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@trendmicro/react-sidenav": "^0.5.0",
     "antd": "^5.0.7",
+    "formik": "^2.2.9",
     "primeicons": "^4.1.0",
     "primereact": "^7.1.0",
     "react": "^17.0.2",
@@ -16,6 +17,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "5.3.3",
     "react-scripts": "4.0.3",
+    "react-section": "^1.1.11",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "rsuite": "^5.0.0-beta.7",
