--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@trendmicro/react-sidenav": "^0.5.0",
     "antd": "^5.0.7",
+    "axios": "^1.2.1",
     "formik": "^2.2.9",
     "primeicons": "^4.1.0",
     "primereact": "^7.1.0",
